rebase, rework, etc
- rebased everything on UIKit to ditch SwiftUI
- learned a lot
- failed to add homescreen shortcuts

--- a/Beanwell/Info.plist
+++ b/Beanwell/Info.plist
@@ -2,6 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>calendar</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>AgendaAction</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Agenda</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>text.badge.plus</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>ActionsAction</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Actions</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>gear</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>SettingsAction</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Settings</string>
+		</dict>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -15,8 +48,6 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
